feat: implement react native wrapper for lingua-rs language detection
This commit completes the initial implementation of react-native-lingua, a React Native
wrapper around the lingua-rs Rust library for language detection.

Key Features:
- JSI-based integration for high-performance language detection
- Support for detecting 75+ languages
- Language confidence scoring and multi-language confidence values
- Cross-platform support (iOS and Android)

Implementation Details:
- Rust FFI layer (rust/) exposing lingua-rs functionality to C/C++
- C++ JSI bindings (cpp/) for JavaScript integration
- iOS native module with XCFramework packaging
- Android JNI bindings with multi-architecture support
- TypeScript API with proper type definitions

Technical Fixes:
- Fixed Rust FFI error handling with proper C string lifetime management
- Resolved 'Unknown type str' compilation error by using *const c_char
- Added @babel/runtime dependency for transpilation
- Organized Rust code into dedicated rust/ directory
- Removed legacy TurboModule boilerplate (multiply method)

Example App:
- Working demo with 20 common languages
- Text detection with confidence scores
- Sample texts in 10+ languages for testing

The library is now functional and ready for further development.

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,9 @@ android/generated
 
 # React Native Nitro Modules
 nitrogen/
+src/target/
+
+# Rust build artifacts
+rust/target/
+rust/generated/
+rust/Cargo.lock
