--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "!**/.*"
   ],
   "scripts": {
-    "example": "yarn workspace react-native-lingua-example",
+    "example": "pnpm --filter react-native-lingua-example",
     "test": "jest",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
@@ -40,6 +40,9 @@
     "prepare": "bob build",
     "release": "release-it --only-version"
   },
+  "workspaces": [
+    "example"
+  ],
   "keywords": [
     "react-native",
     "ios",
@@ -49,7 +52,7 @@
     "type": "git",
     "url": "git+https://github.com/Hkmu/react-native-lingua/.git"
   },
-  "author": "hej <jiehecd@gmail.com> (https://github.com/Hkmu/react-native-lingua)",
+  "author": "hej <jiehecd@gmail.com> (https://github.com/Hkmu/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Hkmu/react-native-lingua//issues"
@@ -64,12 +67,12 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.35.0",
     "@evilmartians/lefthook": "^1.12.3",
-    "@react-native-community/cli": "20.0.1",
-    "@react-native/babel-preset": "0.81.1",
-    "@react-native/eslint-config": "^0.81.1",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native/babel-preset": "0.82.1",
+    "@react-native/eslint-config": "^0.82.1",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.1",
     "commitlint": "^19.8.1",
     "del-cli": "^6.0.0",
     "eslint": "^9.35.0",
@@ -77,8 +80,8 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
-    "react": "19.1.0",
-    "react-native": "0.81.1",
+    "react": "19.1.1",
+    "react-native": "0.82.1",
     "react-native-builder-bob": "^0.40.13",
     "release-it": "^19.0.4",
     "turbo": "^2.5.6",
@@ -88,10 +91,7 @@
     "react": "*",
     "react-native": "*"
   },
-  "workspaces": [
-    "example"
-  ],
-  "packageManager": "yarn@3.6.1",
+  "packageManager": "pnpm@10.14.0",
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
@@ -160,5 +160,8 @@
     "languages": "kotlin-objc",
     "type": "turbo-module",
     "version": "0.54.5"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.28.4"
   }
 }
