build: configure build-on-install to avoid committing large binaries
- Add postinstall script to build Rust native libraries automatically
- Remove large binary files from git (485+ MB total)
- Update .gitignore to exclude build artifacts
- Update README with prerequisites and installation flow

Fixes GitHub file size limit errors for files over 100MB.

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ src/target/
 rust/target/
 rust/generated/
 rust/Cargo.lock
+
+# Native library artifacts (built on install)
+android/jniLibs/
+ios/liblingua_native.xcframework/
