--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
+    "build:rust": "cd rust && make all",
+    "postinstall": "npm run build:rust || echo 'Warning: Rust build failed. Pre-built binaries may be needed.'",
     "prepare": "bob build",
     "release": "release-it --only-version"
   },
