chore: configure build-from-source workflow
- Add header generation target in Makefile
- Configure podspec to build Rust during pod install
- Add Gradle tasks to build Rust before native build
- Include Rust source in NPM package
- Exclude generated header (cpp/liblingua.h) from git and NPM
- Update .gitignore to exclude target/ and generated files
- Remove postinstall script (users build from source)
- Change liblingua.h include to use local path

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,12 @@ rust/target/
 rust/generated/
 rust/Cargo.lock
 
+# Rust analyzer cache (when opened from project root)
+target/
+
+# Generated C header (auto-generated during build)
+cpp/liblingua.h
+
 # Native library artifacts (built on install)
 android/jniLibs/
 ios/liblingua_native.xcframework/
