fix: exclude pre-built binaries from NPM package
Only include Rust source files, not build artifacts (target/, xcframework).
Package size reduced from 205MB to 16.5KB.

--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "src",
     "lib",
     "android",
-    "ios",
+    "ios/*.{h,mm}",
     "cpp",
-    "rust",
+    "rust/src",
+    "rust/Cargo.toml",
+    "rust/build.rs",
+    "rust/Makefile",
+    "rust/rust-toolchain.toml",
     "*.podspec",
     "react-native.config.js",
     "!ios/build",
