--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "!android/gradlew",
     "!android/gradlew.bat",
     "!android/local.properties",
+    "!android/jniLibs",
     "!cpp/liblingua.h",
     "!**/__tests__",
     "!**/__fixtures__",
